sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.code
def cocktailSort3() {
}
var debut=0
	var fin=getNombreValeurs() - 2
	var inverse=true

	do
	{
		inverse=false
		for (i<-debut to fin)
		{
			if (plusPetit(i+1,i))
			{
				echange(i,i+1)
				inverse=true
				fin-=1
			}

		 }

			for (i<-fin to debut by -1)
			{
				if (plusPetit(i+1,i))
				{
					echange(i,i+1)
					inverse=true
					debut+=1
				}
			}
	}while(inverse)
}

